--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Escola Estadual Manoel Bonifácio Nunes da Cunha</title>
     <meta name="description" content="Escola Estadual Manoel Bonifácio Nunes da Cunha - Educação de qualidade, infraestrutura moderna e ensino inovador." />
-    
+    <link rel="shortcut icon" type="image/x-icon" href="images/logoIcon.png"> 
+
     <!-- Preconnect para otimização -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -334,14 +335,14 @@
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h3>Telefone</h3>
-                                <p>(67) 99999-9999</p>
+                                <p>(67) 99297-7395</p>
                             </div>
                         </div>
                         <div class="info-card">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h3>Email</h3>
-                                <p>contato@escolambnc.edu.br</p>
+                                <p>eembnc@sed.ms.gov.br</p>
                             </div>
                         </div>
                     </div>
