site finalizado para apresentacao

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -71,55 +71,191 @@
                 <div class="developers-grid">
                     <div class="developer-card">
                         <div class="card-image">
-                            <img src="images/fotoAlfa.jpg" alt="Desenvolvedor" />
+                            <img src="images-desenvolvedores/IMG_3876.JPG" alt="Desenvolvedor" />
                         </div>
                         <div class="card-content">
-                            <h3>Aluno 1</h3>
+                            <h3>Cleverson Rodrigues</h3>
+                            <p class="card-role">Equipe de Design</p>
                         </div>
                     </div>
 
                     <div class="developer-card">
                         <div class="card-image">
-                            <img src="images/fotoCrisley.png" alt="Desenvolvedor" />
+                            <img src="images-desenvolvedores/IMG_3878.JPG" alt="Desenvolvedor" />
                         </div>
                         <div class="card-content">
-                            <h3>Aluno 2</h3>
+                            <h3>Eduardo Costa</h3>
+                            <p class="card-role">Equipe de Design</p>
                         </div>
                     </div>
 
                     <div class="developer-card">
                         <div class="card-image">
-                            <img src="images/fotoJeferson.jpg" alt="Desenvolvedor" />
+                            <img src="images-desenvolvedores/IMG_3887.JPG" alt="Desenvolvedor" />
                         </div>
                         <div class="card-content">
-                            <h3>Aluno 3</h3>
+                            <h3>Janaina Gonzalez</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
                         </div>
                     </div>
 
                     <div class="developer-card">
                         <div class="card-image">
-                            <img src="images/fotoLuci.jpg" alt="Desenvolvedor" />
+                            <img src="images-desenvolvedores/IMG_3891.JPG" alt="Desenvolvedor" />
                         </div>
                         <div class="card-content">
-                            <h3>Aluno 4</h3>
+                            <h3>Epiffania Barbosa</h3>
+                            <p class="card-role">Equipe de Design</p>
                         </div>
                     </div>
 
                     <div class="developer-card">
                         <div class="card-image">
-                            <img src="images/fotoAlfa.jpg" alt="Desenvolvedor" />
+                            <img src="images-desenvolvedores/IMG_3896.JPG" alt="Desenvolvedor" />
                         </div>
                         <div class="card-content">
-                            <h3>Aluno 5</h3>
+                            <h3>Esther Kurtz</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
                         </div>
                     </div>
 
                     <div class="developer-card">
                         <div class="card-image">
-                            <img src="images/fotoCrisley.png" alt="Desenvolvedor" />
+                            <img src="images-desenvolvedores/IMG_3897.JPG" alt="Desenvolvedor" />
                         </div>
                         <div class="card-content">
-                            <h3>Aluno 6</h3>
+                            <h3>Kauã Molina</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3900.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Lara Bianca</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3902.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Lucas Alexandre</h3>
+                            <p class="card-role">Equipe de Design</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3903.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Maria Alice</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3904.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Nicolas Tostes</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3905.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Pedro Cristaldo</h3>
+                            <p class="card-role">Equipe de Testes</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3908.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Sales Augusto</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3912.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Thatiany Cristina</h3>
+                            <p class="card-role">Equipe de Testes</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3915.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Vitor Kauan</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3916.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Gabrielly Amelia</h3>
+                            <p class="card-role">Equipe de Design</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3918.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Nicolly Vilha</h3>
+                            <p class="card-role">Equipe de Design</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3920.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Carlos Eduardo</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/IMG_3966 - Copia.JPG" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Kamila Eduarda</h3>
+                            <p class="card-role">Equipe de Design</p>
+                        </div>
+                    </div>
+
+                    <div class="developer-card">
+                        <div class="card-image">
+                            <img src="images-desenvolvedores/lessa.jpeg" alt="Desenvolvedor" />
+                        </div>
+                        <div class="card-content">
+                            <h3>Maria Eduarda Lessa da Silva</h3>
+                            <p class="card-role">Equipe de Desenvolvedores</p>
                         </div>
                     </div>
                 </div>
