--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/Escola.webp" class="d-block w-100" alt="Fachada da Escola Manoel Bonifácio Nunes" />
+                        <img src="images/fachada-escola-carousel.jpeg" class="d-block w-100" alt="Fachada da Escola Manoel Bonifácio Nunes" />
                     </div>
                     <div class="carousel-item">
-                        <img src="images/imagem-alunos-sala.webp" class="d-block w-100" alt="Alunos em sala de aula" />
+                        <img src="images/alunos-fetec-carousel.jpeg" class="d-block w-100" alt="Alunos em sala de aula" />
                     </div>
-                    <div class="carousel-item">
-                        <img src="images/imagem-computadores.jpg" class="d-block w-100" alt="Laboratório de informática" />
-                    </div>
+                    <!-- <div class="carousel-item">
+                        <img src="images/alunos-codando.jpeg" class="d-block w-100" alt="Laboratório de informática" />
+                    </div> -->
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -87,7 +87,7 @@
                     <p>Conheça as diferentes áreas de ensino e atividades oferecidas</p>
                 </div>
                 <div class="activities-grid">
-                    <div class="activity-card">
+                    <!-- <div class="activity-card">
                         <div class="activity-image">
                             <img src="images/imagem-volei.jpg" alt="Treinamento de Vôlei" />
                             <div class="activity-overlay">
@@ -98,10 +98,10 @@
                             <h3>Treinamento de Vôlei</h3>
                             <p>Desenvolvimento físico e trabalho em equipe através do esporte</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="activity-card">
                         <div class="activity-image">
-                            <img src="images/imagem-computadores.jpg" alt="Ensino Profissionalizante" />
+                            <img src="images/alunos-manutencao.jpeg" alt="Ensino Profissionalizante" />
                             <div class="activity-overlay">
                                 <i class="fas fa-laptop-code"></i>
                             </div>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="activity-card">
                         <div class="activity-image">
-                            <img src="images/2b4ba0b9cf9942ef9277df078190ac6a.webp" alt="Atletismo" />
+                            <img src="images/atletismo.jpeg" alt="Atletismo" />
                             <div class="activity-overlay">
                                 <i class="fas fa-running"></i>
                             </div>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="activity-card">
                         <div class="activity-image">
-                            <img src="images/imagem_materia.jpg" alt="Ensino Médio" />
+                            <img src="images/ensino-medio.jpeg" alt="Ensino Médio" />
                             <div class="activity-overlay">
                                 <i class="fas fa-graduation-cap"></i>
                             </div>
@@ -394,8 +394,8 @@
                     <h4>Contato</h4>
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Campo Grande - MS</li>
-                        <li><i class="fas fa-phone"></i> (67) 99999-9999</li>
-                        <li><i class="fas fa-envelope"></i> contato@escolambnc.edu.br</li>
+                        <li><i class="fas fa-phone"></i> (67) 99297-7395</li>
+                        <li><i class="fas fa-envelope"></i> eembnc@sed.ms.gov.br</li>
                     </ul>
                 </div>
             </div>
